Bug 343126 - Changes lost if Ask On Exit option is enabled
Summary: Changes lost if Ask On Exit option is enabled
Status: RESOLVED FIXED
Alias: None
Product: kronometer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-21 17:14 UTC by Elvis Angelaccio
Modified: 2015-02-23 11:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2015-01-21 17:14:26 UTC
If the Ask On Exit option is enabled and if the times of an opened file have changed, then after closing Kronometer the changes are lost.

Reproducible: Always

Steps to Reproduce:
1. Open a Kronometer file 
2. Start the stopwatch and save some new laps
3. Close Kronometer window

Actual Results:  
No KMessageBox appears, changes are lost.

Expected Results:  
Kronometer should ask the user if he wants to save the changes on the opened file.
Comment 1 Elvis Angelaccio 2015-01-22 15:13:19 UTC
Git commit 9f8bf9230ccf6548540d5d72d06b1ae7241bb3a5 by Elvis Angelaccio.
Committed on 22/01/2015 at 15:02.
Pushed by elvisangelaccio into branch 'master'.

Remove 'Ask on exit' option

Instead of a custom *Ask on exit* option, use the standard *Don't ask again*
checkbox provided by KMessageBox, when no file is opened. If a file is opened,
just ask the user whether he wants to save the changes.
FIXED-IN: 1.6.0

M  +0    -3    src/kronometer.kcfg
M  +11   -9    src/mainwindow.cpp
M  +8    -30   src/widgets/savesettings.ui

http://commits.kde.org/kronometer/9f8bf9230ccf6548540d5d72d06b1ae7241bb3a5