Remove 'Ask on exit' option

Instead of a custom *Ask on exit* option, use the standard *Don't ask again*
checkbox provided by KMessageBox, when no file is opened. If a file is opened,
just ask the user whether he wants to save the changes.

BUG: 343126
FIXED-IN: 1.6.0